penambahan tombool reset

--- a/index.html
+++ b/index.html
@@ -44,9 +44,10 @@
                 </div>
                 
                 <button type="submit">Kirim</button>
+                <button type="reset" id="resetButton">Reset</button>
             </form>
         </div>
-        
+        <!-- Result/hasil bmi --> 
         <div class="result" id="result">
             <header class="result-header"><h1>Hasil</h1></header>
             <div class="result-content"></div>
